переименовал класс Utility, чтобы он отражал логику работы со стримами Переписал метод findUniquePairs через стримы